--- a/hello_world.html
+++ b/hello_world.html
@@ -9,6 +9,7 @@
 <body>
 <script type="text/javascript">
     document.write("Ahoj ITnetwork!");
+    document.write("Ahoj programátore ;-)");
 </script>
 </body>
 </html>
