Přidán součet stringů

--- a/hello_world.html
+++ b/hello_world.html
@@ -9,7 +9,15 @@
 <body>
 <script type="text/javascript">
     document.write("Ahoj ITnetwork!");
+    document.write("<br />"); //vloží HTML tag pro novou řádku
     document.write("Ahoj programátore ;-)");
+    document.write("<br />");
+    var string1 = "První řetězec a ";
+    var string2 = "druhý řetězec.";
+    var string3 = string1 + string2;
+    document.write("Součet dvou stringů: ");
+    document.write(string3);
+
 </script>
 </body>
 </html>
