Přidán projekt z JS-okmžitě

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
-<script src="test_veku.js"></script>
+<!--<script src="test_veku.js"></script>-->
+<script src="Spravce_ukolu.js"></script>
 </body>
 </html>
