--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
 <!--<script src="test_veku.js"></script>-->
-<script src="Spravce_ukolu.js"></script>
+<script src="test_TS.js"></script>
 </body>
 </html>
