vycisteni projektu a zalozeni ucebnich dokumentu HTML

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-
-<html lang="cs-cz">
+<html lang="cs-CZ">
 <head>
-    <meta charset="utf-8" />
-    <title>Testování JavaScriptu</title>
+    <meta charset="UTF-8">
+    <title>Test HTML5</title>
 </head>
-
 <body>
-<!--<script src="test_veku.js"></script>-->
-<script src="test_TS.js"></script>
+    <h1>Můj první web</h1>
+    <p>Vítejte na mém <strong>prvním</strong> webu.</p>
+    <img src="src/picture.jpg" alt="Slovakia Valley" height="183" width="275"/>
+    <h2>Něco o mě</h2>
+    <p>Jmenuji se Pepa Novák a pracuji jako slévač v Nových hutích.
+        Kontaktovat me mužete <a href="kontakt.html">zde</a>.</p>
+    <p>Baví mě IT - především programování.</p>
+    <p>Dále hraju na vozembouch v hard folkové kapele.</p>
+    <h2>Dovednosti</h2>
+    <p>Hraní her. <br>Hraní na nervy. <br>Hraní na city. <br>Hraní na bicí.</p>
+    <p>Tato stránka je vytvořená podle tutoriálu na
+        <a href="https://www.itnetwork.cz" target="_blank">IT Network</a>.</p>
 </body>
 </html>
