rozsireni projektu o dalsi stranky a elementy

--- a/kontakt.html
+++ b/kontakt.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Kontaktní údaje</title>
+    <link rel="stylesheet" href="styl.css" type="text/css">
 </head>
 <body>
-<p>Napište mi na: <strong>pepa (zavináč) email (tečka) cz</strong>.</p>
-<a href="index.html">Zpět na hlavní stranu</a>
+<h1>Můj kontakt</h1>
+<p><img src="obrazky/email.png"/></p>
+<p>Napište mi na: <strong>pepa (zavináč) email (tečka) cz</strong></p>
+<p>
+    <a href="index.html">Zpět na hlavní stranu</a>
+</p>
 </body>
 </html>
