--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Test HTML5</title>
+    <link rel="stylesheet" href="styl.css" type="text/css">
 </head>
 <body>
     <h1>Můj první web</h1>
     <p>Vítejte na mém <strong>prvním</strong> webu.</p>
-    <img src="src/picture.jpg" alt="Slovakia Valley" height="183" width="275"/>
+    <p class="centrovany">
+        <img src="src/picture.jpg" alt="Slovakia Valley" height="183" width="275"/>
+    </p>
     <h2>Něco o mě</h2>
     <p>Jmenuji se Pepa Novák a pracuji jako slévač v Nových hutích.
         Kontaktovat me mužete <a href="kontakt.html">zde</a>.</p>
     <p>Baví mě IT - především programování.</p>
     <p>Dále hraju na vozembouch v hard folkové kapele.</p>
     <h2>Dovednosti</h2>
-    <p>Hraní her. <br>Hraní na nervy. <br>Hraní na city. <br>Hraní na bicí.</p>
+    <p>Moje dovednosti najdete<a href="dovednosti.html">zde</a>.</p>
     <p>Tato stránka je vytvořená podle tutoriálu na
         <a href="https://www.itnetwork.cz" target="_blank">IT Network</a>.</p>
 </body>
