--- a/rozlozeni.html
+++ b/rozlozeni.html
@@ -14,11 +14,11 @@
     <section>
         <p>Vítejte na mém prvním webu, psát weby se teprve učím, ale myslím,
             že mi to docela jde.</p>
-        <p><img src="obrazky/avatar.png" alt="Programátor HoBi" class="vlevo"/>Jmenuji se Honza Bittner a je mi 16 let.
+        <p class="centrovany"><img src="obrazky/avatar.png" alt="Programátor HoBi"/></p>
+        <p>Jmenuji se Honza Bittner a je mi 16 let.
             Chodím na Střední průmyslovou školu v České Lípě na obor IT. Kontaktovat mě můžete na
             <a href="kontakt.html">kontaktní stránce</a>.</p>
         <p>Rád čtu a někdy (hlavně v létě) i sportuju.</p>
-        <div class="cistic"></div>
         <p>Mým hlavním koníčkem (a doufám že jednou i zaměstnáním) je <strong>programování</strong>!</p>
     </section>
     <div class="cistic"></div>
