--- a/dovednosti.html
+++ b/dovednosti.html
@@ -9,37 +9,61 @@
 </head>
 
 <body>
-<h1>Dovednosti</h1>
+<header>
+    <div id="logo"><h1>HoBi</h1></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Domů</a></li>
+            <li><a href="omne.html">O mně</a></li>
+            <li class="aktivni"><a href="dovednosti.html">Dovednosti</a></li>
+            <li><a href="reference.html">Reference</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+    </nav>
+</header>
 
-<table>
-    <tr>
-        <td>
-            <img src="obrazky/html.png" alt="HTML" />
-        </td>
-        <td>
-            <img src="obrazky/java.png" alt="Java" />
-        </td>
-        <td>
-            <img src="obrazky/pascal.png" alt="Pascal" />
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <h2>HTML</h2>
-            <p>S HTML začínám a umím vytvořit jednoduché webové stránky, jako jsou tyto.</p>
-        </td>
-        <td>
-            <h2>Java</h2>
-            <p>Javu se učím z tutoriálů na ITnetwork.cz, dokáži tvořit jednoduché konzolové i okenní aplikace.</p>
-        </td>
-        <td>
-            <h2>Pascal</h2>
-            <p>Pascal nás učí ve škole, ale raději se učím moderní jazyky z ITnetwork.</p>
-        </td>
-    </tr>
-</table>
+<article>
+    <div id="centrovac">
+        <header>
+            <h1>Dovednosti</h1>
+        </header>
+        <section>
+            <table id="dovednosti">
+                <tr class="centrovany">
+                    <td>
+                        <img src="obrazky/html.png" alt="HTML" />
+                    </td>
+                    <td>
+                        <img src="obrazky/java.png" alt="Java" />
+                    </td>
+                    <td>
+                        <img src="obrazky/pascal.png" alt="Pascal" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h2>HTML</h2>
+                        <p>S HTML začínám a umím vytvořit jednoduché webové stránky, jako jsou tyto.</p>
+                    </td>
+                    <td>
+                        <h2>Java</h2>
+                        <p>Javu se učím z tutoriálů na ITnetwork.cz, dokáži tvořit jednoduché konzolové i okenní aplikace.</p>
+                    </td>
+                    <td>
+                        <h2>Pascal</h2>
+                        <p>Pascal nás učí ve škole, ale raději se učím moderní jazyky z ITnetwork.</p>
+                    </td>
+                </tr>
+            </table>
+        </section>
+        <div class="cistic"></div>
+    </div>
 
-<p><a href="index.html">Zpět na hlavní stranu</a></p>
+</article>
+
+<footer>
+    Vytvořil &copy;HoBi 2013 pro <a href="http://itnetwork.cz">ITNETWORK.CZ</a>
+</footer>
 </body>
 
 </html>
