--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
-<html lang="cs-CZ">
+<html lang="cs-cz">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Test HTML5</title>
-    <link rel="stylesheet" href="styl.css" type="text/css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styl.css" type="text/css" />
+    <title>HoBiho portfolio</title>
 </head>
+
 <body>
-    <h1>Můj první web</h1>
-    <p>Vítejte na mém <strong>prvním</strong> webu.</p>
-    <p class="centrovany">
-        <img src="src/picture.jpg" alt="Slovakia Valley" height="183" width="275"/>
-    </p>
-    <h2>Něco o mě</h2>
-    <p>Jmenuji se Pepa Novák a pracuji jako slévač v Nových hutích.
-        Kontaktovat me mužete <a href="kontakt.html">zde</a>.</p>
-    <p>Baví mě IT - především programování.</p>
-    <p>Dále hraju na vozembouch v hard folkové kapele.</p>
-    <h2>Dovednosti</h2>
-    <p>Moje dovednosti najdete<a href="dovednosti.html">zde</a>.</p>
-    <p>Tato stránka je vytvořená podle tutoriálu na
-        <a href="https://www.itnetwork.cz" target="_blank">IT Network</a>.</p>
+    <header>
+        <div id="logo"><h1>HoBi</h1></div>
+        <nav>
+            <ul>
+                <li class="aktivni"><a href="index.html">Domů</a></li>
+                <li><a href="omne.html">O mně</a></li>
+                <li><a href="dovednosti.html">Dovednosti</a></li>
+                <li><a href="reference.html">Reference</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    <article>
+        <div id="centrovac">
+            <header>
+                <h1>O mně</h1>
+            </header>
+
+            <section>
+                <p>Vítejte na mém prvním webu, psát weby se teprve učím, ale myslím,
+                    že mi to docela jde.</p>
+                <p class="centrovany"><img src="obrazky/avatar.png" alt="Programátor HoBi"/></p>
+                <p>Jmenuji se Honza Bittner a je mi 16 let.
+                    Chodím na Střední průmyslovou školu v České Lípě na obor IT. Kontaktovat mě můžete na
+                    <a href="kontakt.html">kontaktní stránce</a>.</p>
+                <p>Rád čtu a někdy (hlavně v létě) i sportuju.</p>
+                <p>Mým hlavním koníčkem (a doufám že jednou i zaměstnáním) je <strong>programování</strong>!</p>
+            </section>
+            <div class="cistic"></div>
+        </div>
+    </article>
+    <footer>
+        Vytvořil &copy;HoBi 2017 pro <a href="http://itnetwork.cz">ITNETWORK.CZ</a>
+    </footer>
 </body>
 </html>
