--- a/kontakt.html
+++ b/kontakt.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs-cz">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Kontaktní údaje</title>
-    <link rel="stylesheet" href="styl.css" type="text/css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styl.css" type="text/css" />
+    <title>Kontaktujte mě</title>
 </head>
+
 <body>
-<h1>Můj kontakt</h1>
-<p><img src="obrazky/email.png"/></p>
-<p>Napište mi na: <strong>pepa (zavináč) email (tečka) cz</strong></p>
-<p>
-    <a href="index.html">Zpět na hlavní stranu</a>
-</p>
+<header>
+    <div id="logo"><h1>HoBi</h1></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Domů</a></li>
+            <li><a href="omne.html">O mně</a></li>
+            <li><a href="dovednosti.html">Dovednosti</a></li>
+            <li><a href="reference.html">Reference</a></li>
+            <li class="aktivni"><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+    </nav>
+</header>
+
+<article>
+    <div id="centrovac">
+        <header>
+            <h1>Kontakt</h1>
+        </header>
+
+        <section>
+            <p>
+                <img src="obrazky/email.png" alt="email" class="vlevo" />
+                Pokud mi chcete něco sdělit, napište mi email na <strong>hobi (zavináč) hobi (tečka) cz nebo využijte formuláře níže</strong>.
+            </p>
+
+            <p class="centrovany">
+                <iframe frameborder="0" scrolling="no" width="500px" height="220px"
+                        src="http://www.itnetwork.cz/service/mail_form.php?hash=kod-vaseho-mailformu">
+                </iframe>
+            </p>
+        </section>
+        <div class="cistic"></div>
+    </div>
+</article>
+
+
+<footer>
+    Vytvořil &copy;HoBi 2013 pro <a href="http://itnetwork.cz">ITNETWORK.CZ</a>
+</footer>
 </body>
 </html>
